Navbar: Bug where it was not sticky on mobile
Amended so that the navbar is now sticky on mobile browsers as well as desktop.

--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@ a:link, a:visited {
 
 .nav-container {
   position: sticky;
+  position: -webkit-sticky; /* for stickiness on mobile. */
   top: 0;
   background-color: #252934;
   width: inherit;
